--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "test": "npm test",
       "dev": "nodemon --exec ts-node src/index.ts",
       "lint": "eslint src",
+      "lint-fix": "eslint src --fix",
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "db:migrate": "typeorm-ts-node-commonjs -d src/db migration:run",
@@ -31,17 +32,18 @@
    "devDependencies": {
       "@types/express": "^4.17.17",
       "@types/node": "^16.11.10",
-      "@typescript-eslint/eslint-plugin": "^5.56.0",
+      "@typescript-eslint/eslint-plugin": "^5.58.0",
       "@typescript-eslint/parser": "^5.56.0",
       "create-ts-index": "^1.14.0",
       "dotenv": "^16.0.3",
-      "eslint": "^8.36.0",
+      "eslint": "^8.38.0",
+      "eslint-config-standard-with-typescript": "^34.0.1",
       "eslint-plugin-import": "^2.27.5",
-      "eslint-plugin-n": "^15.6.1",
+      "eslint-plugin-n": "^15.7.0",
       "eslint-plugin-promise": "^6.1.1",
       "nodemon": "^2.0.22",
       "ts-jest": "^29.0.5",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+      "typescript": "^4.5.2"
    }
 }
