--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
    },
    "repository": {
       "type": "git",
-      "url": "git@git.com"
+      "url": "https://github.com/jersonlopez/import-league.git"
    },
    "author": "jersonlopez",
    "license": "ISC",
